--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @message.user %>
+  <%= @message.user.name %>
 </p>
 
 <%= link_to 'Edit', edit_message_path(@message) %> |
