--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,18 +12,19 @@
   </thead>
 
   <tbody>
-    <% @messages.each do |message| %>
-      <tr>
-        <td><%= message.body %></td>
-        <td><%= message.user.name %></td>
-        <td><%= link_to 'Show', message %></td>
-        <td><%= link_to 'Edit', edit_message_path(message) %></td>
-        <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+
+        <%= sync partial: 'message_row', collection: @messages %>
+        <%= sync_new partial: 'message_row', resource: Message.new %>        
+
   </tbody>
 </table>
 
 <br>
+
+<%= form_for new_message_path, remote: true do |f| %>
+    <%= f.text_field :body %>
+    <%= f.text_field :user %>
+    <%= f.submit %>
+<% end %>
 
 <%= link_to 'New Message', new_message_path %>
